# django-actinia

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .test.env  CONTRIBUTING.md  Dockerfile.dev  MANIFEST.in  README.md  README.rst  docker-compose-test.yml  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  schema.yml  setup.cfg  test_settings.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement.md
.github/workflows/: django_tests.yml  pylint_black.yml
OpenPlain Dev/: workspace.yml
actinia/: Dockerfile  __init__.py  actinia.cfg  admin.py  apps.py  celery.py  consumers.py  routing.py  tasks.py  urls.py  utils.py
actinia/migrations/: 0001_initial.py
actinia/models/: ActiniaUser.py  Location.py  Mapset.py  ObjectAuditAbstract.py  ObjectInfoAbstract.py  Organization.py  Region.py  SimpleResponseAbstract.py  Team.py  Token.py  TokenResponseModel.py  __init__.py
actinia/serializers/: ActiniaSimpleResponseSerializer.py  LocationResponseSerializer.py  LocationSerializer.py  UserSerializer.py
actinia/tasks/: __init__.py  asyncResourceStatus.py
actinia/views/: __init__.py
docs/source/: actinia.models.rst  actinia.rst  actinia.serializers.rst  actinia.views.general.rst  actinia.views.imagery.rst  actinia.views.raster.rst  actinia.views.rst  actinia.views.vector.rst  conf.py  index.rst  modules.rst
grass/: __init__.py  admin.py  apps.py  celery.py  consumers.py  routing.py  urls.py  utils.py  validators.py
grass/migrations/: 0001_initial.py  0002_remove_organization_created_by_and_more.py  0003_mapset_users.py  0004_location_users_alter_mapset_users.py  0005_region_rename_users_location_actinia_users.py  0006_location_slug_mapset_slug.py  0007_alter_location_options.py  0008_remove_mapset_unique_mapset_and_more.py  0009_remove_location_unique_location_and_more.py  0010_rename_location_mapset_project_and_more.py
grass/models/: ActiniaUser.py  Layer.py  Location.py  Mapset.py  MapsetInfoResponseModel.py  ObjectAuditAbstract.py  ObjectInfoAbstract.py  Permission.py  ProcessingResponse.py  Region.py  SimpleResponseAbstract.py  Token.py  TokenResponseModel.py  __init__.py
grass/serializers/: APILogSerializer.py  ActiniaSimpleResponseSerializer.py  ActiniaUserLocationSerializer.py  ActiniaUserResponseSerializer.py  ActiniaUserSerializer.py  ApiInfoModelSerializer.py  ApiKeySerializer.py  ExceptionTracebackModelSerializer.py  GrassModuleSerializer.py  InputParameterImportDescrSerializer.py  InputParameterSerializer.py  LocationDetailSerializer.py  LocationResponseSerializer.py  LocationSerializer.py  MapsetInfoModelSerializer.py  MapsetInfoResponseSerializer.py  MapsetResponseModelSerializer.py  OutputParameterExportSerializer.py  (+11 more)
redis_config/: django-redis.conf
test_api/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
tests/: ActiniaAPIMocks.py  test.settings.py
(+92 files in other folders)
