[metadata]
name = django-actinia
version = 0.0.1-alpha.0
description = A Django package to utilize Actinia REST API for GRASS GIS for distributed compuational analysis and modeling.
long_description = file: README.rst
url = https://tomorrownow.github.io./django-actinia
license = LICENSE

[flake8]
ignore = E203, E265, E266, E501, W503, F403, F401
max-line-length = 110
max-complexity = 18
select = B,C,E,F,W,T4,B9

[options]
include_package_data = true
packages = find:
python_requires = >=3.10
install_requires =
    Django >= 4.2

[build_sphinx]
project= 'django-actinia'
version=0.0.1-alpha.0
release=0.0.1-alpha.0
source-dir= 'docs'
builder= 'html'
